done med menyn funktionalitt, och styling, la in svart backgrund till sidan när menyn är öppen. adderade overflow hidden för att stoppa sidan från scroll när menyn är öppen.

--- a/style.scss
+++ b/style.scss
@@ -1,25 +1,12 @@
 :root {
-  // font-size: 16px;
-  // line-height: 24px;
-  // font-weight: 400;
 
-  // color-scheme: light dark;
-  // color: rgba(255, 255, 255, 0.87);
-  // background-color: #242424;
-
-  // font-synthesis: none;
-  // text-rendering: optimizeLegibility;
-  // -webkit-font-smoothing: antialiased;
-  // -moz-osx-font-smoothing: grayscale;
-  // -webkit-text-size-adjust: 100%;
 }
 
 body{
   background-color: #FFFFFF;
   color: #000000;
-  height: 100vh;
+  height: 100%;
   margin-top: 0%;
-  overflow: hidden;
 
   h1{
     display: flex;
@@ -56,7 +43,7 @@ header{
   top: -11px;
 }
 
-.Bigh{
+.Menubtn{
   position: absolute;
   font-size: 4rem;
   margin: 0%;
@@ -155,13 +142,13 @@ header{
   width: 25%;
   position: absolute;
   top: 75%;
-  left: 80%;
+  left: 75%;
 }
 
 .Forthtext{
   font-size: 1rem;
   font-family: 'kyivType regular sans', sans-serif;
-  width: 75%;
+  width: 73%;
   margin: 0%;
   position: absolute;
   top: 94%;
@@ -174,17 +161,17 @@ header{
 }
 
 .menu{
-  height: 100vh;
+  height: 100%;
   width: 76%;
   position: absolute;
   right: 0;
-  background-color: yellow;
+  background-color: #FFFFFF;
   z-index: 10;
 }
 
 .grayfilter{
   background-color: black;
-  opacity: 90%;
+  opacity: 80%;
   position: fixed;
   top: 0;
   bottom: 0;
